2001-08-31  Eric Valette <valette@crf.canon.fr>

	* network/network.c: Fix to account for return value when
	installing interrupts handler.

2001-05-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.in: Add bspopts.h.
	* include/.cvsignore: Add bspopts.h*, stamp-h*.
	* include/Makefile.am: Use *_HEADERS instead of *H_FILES.
	* vectors/Makefile.am: Ditto.
	* include/bsp.h: Include bspopts.h.

2001-05-10	Ralf Corsepius	<corsepiu@faw.uni-ulm.de>

	* configure.in: Use RTEMS_PROG_CC_FOR_TARGET([-ansi -fasm]).

2001-04-20	Eric Valette <valette@crf.canon.fr>

 	* include/bsp.h: Added include of <bsp/vectors.h>
	* vectors/vectors.h: Corrected typos.

2001-04-11	Eric Valette <valette@crf.canon.fr>

	* clock/.cvsignore, clock/Makefile.am, clock/p_clock.c,
	include/8xx_immap.h, include/commproc.h, irq/.cvsignore,
	irq/Makefile.am, irq/irq.c, irq/irq.h, irq/irq_asm.S,
	irq/irq_init.c, vectors/.cvsignore, vectors/Makefile.am,
	vectors/vectors.S, vectors/vectors.h,
	vectors/vectors_init.c: New file.
	* Switch the eth_comm BSP to use the "new exception processing model."

2001-04-11	Eric Valette <valette@crf.canon.fr>

	* Makefile.am, configure.in, console/console.c,
	include/Makefile.am, include/bsp.h, network/network.c,
	startup/Makefile.am, startup/bspstart.c, startup/linkcmds,
	wrapup/Makefile.am: Switch the eth_comm BSP to use the
	"new exception processing model."

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-11-01	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: assoc.h, error.h, libio_.h, libio.h, and
	libcsupport.h moved from libc to lib/include/rtems and
	now must be referenced as <rtems/XXX.h>.   Header file order
	was cleaned up while doing this.
	Also removed obsolete references to STACK_CHECKER_ON.
