@@ -21,7 +21,7 @@ $(PROJECT_INCLUDE)/%.h: %.h
  $(PROJECT_INCLUDE)/bsp/%.h : %.h
 	$(INSTALL_DATA) $< $@
 
-PREINSTALL_FILES += $(PROJECT_INCLUDE) $(PROJECT_INCLUDE)/bsp \
+PREINSTALL_FILES = $(PROJECT_INCLUDE) $(PROJECT_INCLUDE)/bsp \
 	$(include_HEADERS:%=$(PROJECT_INCLUDE)/%) \
 	$(include_bsp_HEADERS:%=$(PROJECT_INCLUDE)/bsp/%)
 
