@@ -1,3 +1,9 @@
+2001-09-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* include/Makefile.am: Use 'PREINSTALL_FILES ='.
+	* irq/Makefile.am: Use 'PREINSTALL_FILES ='.
+	* vectors/Makefile.am: Use 'PREINSTALL_FILES ='.
+
 2001-08-31  Eric Valette <valette@crf.canon.fr>
 
 	* network/network.c: Fix to account for return value when
